# flyem-snapshot

./: .gitattributes  .gitignore  JANELIA_REMOTE_DEBUG.md  LICENSE.txt  README.md  pixi.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
conda-recipe/: meta.yaml
flyem_snapshot/: _version.py  annotations.py  caches.py  core.py  flat.py  flyem_snapshot.py  main.py  reports.py  rois.py  sizes.py  synapses.py  util.py
flyem_snapshot/inputs/: annotations.py  dvidseg.py  elements.py  group_nt_predictions.py  landmarks.py  neurotransmitters.py  rois.py  sizes.py  synapses.py
flyem_snapshot/neuprint/: __init__.py  annotations.py  neuprint.py  segment.py  synapse.py  synapseset.py  util.py
flyem_snapshot/outputs/: flat.py  meshes.py  neurotransmitters.py  reports.py  skeletons.py
flyem_snapshot/outputs/neuprint/: annotations.py  element.py  elementset.py  indexes.py  meta.py  neuprint.py  neuroglancer.py  segment.py  synapse.py  synapseset.py  util.py
flyem_snapshot/outputs/neuprint/scripts/: _launch_snapshot_and_bash_shell.sh  _launch_snapshot_and_cypher_shell.sh  ingest-neuprint-snapshot-using-apptainer.sh  ingest-neuprint-snapshot-within-neo4j-container.sh  inspect-neuprint-snapshot.sh  neo4j.conf
flyem_snapshot/outputs/neuprint/templates/: create-indexes.cypher
flyem_snapshot/plots/: __init__.py  cross_dataset_roi_comparison.py  roi_completeness_bars.py
flyem_snapshot/util/: checksum.py  export_bokeh.py  lsf.py  util.py
scripts/: ingest-neuprint-snapshot-using-apptainer.sh  ingest-neuprint-snapshot-within-neo4j-container.sh  ingest-snapshot-via-singularity.sh  ingest-snapshot.sh  neo4j.conf
shell_scripts/: restart_instance.sh
tmp/: optic-lobe-v1.1.json
